[package]
name = "gtmpl-ng"
version = "0.7.2"
authors = ["Florian Dieminger <me@fiji-flo.de>", "Paul Colin Hennig <8d_fvfmaa-o2wf_79aqig6g2ki6-09ffkeqmyo3d@vindelicum.eu>"]
description = "The Golang Templating Language for Rust (fork with line number fix)"
license = "MIT"
repository = "https://github.com/firstdorsal/gtmpl-rust"
documentation = "https://docs.rs/crate/gtmpl-ng"
keywords = ["golang", "template", "templating"]
categories = ["template-engine"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "tests/**/*.rs", "README.md", "LICENSE"]
edition = "2018"

[badges]
maintenance = { status = "passively-maintained" }

[features]
gtmpl_dynamic_template = []

[dependencies]
lazy_static = "1"
percent-encoding = "2"
gtmpl_value = "0.5"
anyhow = "1"
thiserror = "1"

[dev-dependencies]
gtmpl_derive = "0.5"
